name:                GCLparser
version:             0.2.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Stefan Koppier, Wishnu Prasetya
-- maintainer:          s.koppier@students.uu.nl
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Library
  exposed-modules:     GCLParser.Parser
                     , GCLParser.GCLDatatype
                     , GCLParser.PrettyPrint
                     , GCLInterpreter
                     , ProgramPath
                     , WLP
                     , MuGCL
                     , GCLUtils
                     , GCLLexer.Token
                     , GCLLexer.Lexer
                     , ExamplesOfSemanticFunction
  -- other-extensions:
  build-depends:       base   >= 4.10
                     , array
                     , containers
                     , optparse-applicative
                     , pretty
                     , libBF >= 0.6.2
                     , z3
                     , transformers
  hs-source-dirs:      src
  build-tools:         happy, alex
  default-language:    Haskell2010
  GHC-Options:         -Wall
  default-extensions:  TupleSections
                     , NamedFieldPuns

Test-Suite test-verifier
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  other-modules:      ProgramPathTests,
                      WLPTests
  build-depends:        base >= 4.10
                      , GCLparser
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck